src/main/default/objects/Account/fields/Duplicate_Check__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Duplicate Check -- Check if Account is a duplicate</description>
    <inlineHelpText>Duplicate Check -- Check if Account is a duplicate</inlineHelpText>
    <label>Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>