src/main/default/objects/Account/fields/Duplicate_Check_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Check_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate Check Candidate</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>