src/main/default/objects/Account/fields/Duplicate_Check_Error__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Check_Error__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Duplicate Check Error</label>
    <length>4096</length>
    <type>LongTextArea</type>
</CustomField>