src/main/default/objects/Account/fields/Duplicate_Check_Number_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Check_Number_Contacts__c</fullName>
    <label>Duplicate Check Number Contacts</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>